# caffe-mobile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindvecLib.cmake
examples/android/CaffeSimple/app/: build.gradle  proguard-rules.pro
examples/android/CaffeSimple/app/src/androidTest/java/com/yangwenbo/caffesimple/: ExampleInstrumentedTest.java
examples/android/CaffeSimple/app/src/main/: AndroidManifest.xml
examples/android/CaffeSimple/app/src/main/cpp/: native-lib.cpp
examples/android/CaffeSimple/app/src/main/java/com/yangwenbo/caffemobile/: CaffeMobile.java
examples/android/CaffeSimple/app/src/main/java/com/yangwenbo/caffesimple/: MainActivity.java
examples/android/CaffeSimple/app/src/main/res/layout/: activity_main.xml
examples/android/CaffeSimple/app/src/main/res/values/: strings.xml
examples/android/CaffeSimple/app/src/test/java/com/yangwenbo/caffesimple/: ExampleUnitTest.java
examples/android/CaffeSimple/gradle/wrapper/: gradle-wrapper.properties
examples/ios/simple/CaffeSimple/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  ImageReader.h  ImageReader.mm  ViewController.h  ViewController.m  ViewController.mm  main.m
examples/ios/simple/CaffeSimple.xcodeproj/: project.pbxproj
examples/ios/simple/CaffeSimple/Base.lproj/: Main.storyboard
examples/ios/simple/CaffeSimple/data/: net.protobin  net.prototxt
examples/mnist/: test_lenet.sh
include/caffe/: caffe.hpp  common.hpp  filler.hpp  fmath.hpp  glog_wrapper.hpp  net.hpp
include/caffe/layers/: base_data_layer.hpp  nnpack_convolution_layer.hpp  nnpack_inner_product_layer.hpp  nnpack_pooling_layer.hpp
include/caffe/util/: benchmark.hpp  io.hpp  math_functions.hpp  rng.hpp  upgrade_proto.hpp
patch/: diff.py  patch.py  synced_version
patch/include/caffe/: caffe.hpp.patch  common.hpp.patch  filler.hpp.patch  net.hpp.patch
patch/include/caffe/layers/: base_data_layer.hpp.patch
patch/include/caffe/util/: benchmark.hpp.patch  io.hpp.patch  math_functions.hpp.patch  rng.hpp.patch
patch/src/caffe/: common.cpp.patch  net.cpp.patch
patch/src/caffe/layers/: base_data_layer.cpp.patch  dropout_layer.cpp.patch  memory_data_layer.cpp.patch
patch/src/caffe/util/: benchmark.cpp.patch  io.cpp.patch  math_functions.cpp.patch
patch/tools/: caffe.cpp.patch
src/caffe/: CMakeLists.txt  common.cpp  layer_factory.cpp  net.cpp
src/caffe/layers/: base_data_layer.cpp  dropout_layer.cpp  memory_data_layer.cpp  nnpack_convolution_layer.cpp  nnpack_inner_product_layer.cpp  nnpack_pooling_layer.cpp  recurrent_layer.cpp  reduction_layer.cpp  softmax_loss_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: benchmark.cpp  io.cpp  math_functions.cpp  upgrade_proto.cpp
src/jni/: CMakeLists.txt  caffe_jni.cpp  caffe_mobile.cpp  caffe_mobile.hpp
tools/: CMakeLists.txt  build_android.sh  build_ios.sh  caffe.cpp  prototxt2bin.py
